<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context="com.jfc.apps.hive.MainActivity" 
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginStart="15dip"
	    android:layout_marginLeft="15dip"
        android:orientation="horizontal" >
		
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:orientation="vertical" >
	        
	   		<TextView
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:text="@string/cpuTempLabel"
	   		    android:textAppearance="?android:attr/textAppearanceMedium"
	   		    android:textStyle="bold" />
	
	   		<TextView
		        android:id="@+id/timestampText"
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:layout_marginLeft="15dip"
	   		    android:layout_marginStart="15dip"
	   		    android:text="@string/timestamp"
	            android:background="#C9EAEA"
	   		    android:textStyle="italic"
	   		    android:textAppearance="?android:attr/textAppearanceSmall" />

   		</LinearLayout>
   		
		<LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_weight="0.5"
	            android:layout_gravity="right"
	            android:orientation="vertical" >
	        
		  <TextView
		      android:layout_width="match_parent"
		      android:layout_height="1dip"
		      android:layout_weight="0.5"
		      android:text="@string/empty"
		      android:textAppearance="?android:attr/textAppearanceSmall" />

		  <TextView
		      android:id="@+id/cpuTempText"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_weight="0.5"
	          android:background="#C9EAEA"
		      android:layout_gravity="right"
		      android:text="@string/testTemp"
		      android:textAppearance="?android:attr/textAppearanceMedium" />

		  <TextView
		      android:layout_width="match_parent"
		      android:layout_height="1dip"
		      android:layout_weight="0.5"
		      android:text="@string/empty"
		      android:textAppearance="?android:attr/textAppearanceSmall" />
			
		  <TextView
		      android:layout_width="match_parent"
		      android:layout_height="1dip"
		      android:layout_weight="0.5"
		      android:visibility="invisible"
		      android:text="@string/empty"
		      android:textAppearance="?android:attr/textAppearanceSmall" />

		</LinearLayout>
		
		<ImageButton
		    android:id="@+id/selectCpuTempButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="end"
		    android:layout_weight="0.1"
		    android:visibility="invisible"
		    android:contentDescription="@string/cpuTempDesc"
		    android:src="@drawable/ic_rarrow"
		    android:text="@string/empty" />

	</LinearLayout>
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
	    android:background="#888888" />

</LinearLayout>
