<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="#888888"
        android:orientation="horizontal" >
        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/settings"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textStyle="bold" />

		<View
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="0.5" />

	</LinearLayout>

    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
	    android:background="#888888" />

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="15dip"
        android:orientation="horizontal" >
		
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:orientation="vertical" >
	        
	   		<TextView
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:text="@string/active_hive"
	   		    android:textAppearance="?android:attr/textAppearanceMedium"
	   		    android:textStyle="bold" />
	
	   		<TextView
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:layout_marginLeft="15dip"
	   		    android:text="@string/active_hive_desc_hint"
	   		    android:textAppearance="?android:attr/textAppearanceSmall" />

   		</LinearLayout>
   		
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:layout_gravity="right"
	        android:orientation="vertical" >
	        
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="1dip"
		        android:layout_weight="0.5"
			    android:text="@string/empty"
			    android:textAppearance="?android:attr/textAppearanceSmall" />

	    	<TextView
			    android:id="@+id/active_hive_text"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_weight="0.5"
	        	android:background="#848989"
		        android:layout_gravity="right"
			    android:text="@string/active_hive_hint" />

			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="1dip"
		        android:layout_weight="0.5"
			    android:text="@string/empty"
			    android:textAppearance="?android:attr/textAppearanceSmall" />
			
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="1dip"
		        android:layout_weight="0.5"
			    android:text="@string/empty"
			    android:textAppearance="?android:attr/textAppearanceSmall" />

	    </LinearLayout>
	    
		<ImageButton
		    android:id="@+id/active_hive_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="right"
		    android:layout_weight="0.1"
		    android:src="@drawable/ic_rarrow"
		    android:text="@string/empty" />

	</LinearLayout>

    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
	    android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="15dip"
        android:orientation="horizontal" >
		
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:orientation="vertical" >
	        
	   		<TextView
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:text="@string/ble2cld_hives"
	   		    android:textAppearance="?android:attr/textAppearanceMedium"
	   		    android:textStyle="bold" />
	
	   		<TextView
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:layout_marginLeft="15dip"
	   		    android:text="@string/ble2cld_hives_desc_hint"
	   		    android:textAppearance="?android:attr/textAppearanceSmall" />

   		</LinearLayout>
   		
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:layout_gravity="right"
	        android:orientation="vertical" >
	        
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="1dip"
		        android:layout_weight="0.5"
			    android:text="@string/empty"
			    android:textAppearance="?android:attr/textAppearanceSmall" />

	    	<TextView
			    android:id="@+id/hive_id_text"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_weight="0.5"
	        	android:background="#848989"
		        android:layout_gravity="right"
			    android:text="@string/hive_id_hint" />

			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="1dip"
		        android:layout_weight="0.5"
			    android:text="@string/empty"
			    android:textAppearance="?android:attr/textAppearanceSmall" />
			
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="1dip"
		        android:layout_weight="0.5"
			    android:text="@string/empty"
			    android:textAppearance="?android:attr/textAppearanceSmall" />

	    </LinearLayout>
	    
		<ImageButton
		    android:id="@+id/hive_pair_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="right"
		    android:layout_weight="0.1"
		    android:src="@drawable/ic_rarrow"
		    android:text="@string/empty" />

	</LinearLayout>

    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
	    android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="15dip"
        android:orientation="horizontal" >
		
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:orientation="vertical" >
	        
	   		<TextView
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:text="@string/enable_bridge_label"
	   		    android:textAppearance="?android:attr/textAppearanceMedium"
	   		    android:textStyle="bold" />
	
	   		<TextView
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:layout_marginLeft="15dip"
	   		    android:text="@string/enable_bridge_desc_hint"
	   		    android:textAppearance="?android:attr/textAppearanceSmall" />

   		</LinearLayout>
   		
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:layout_gravity="right"
	        android:orientation="vertical" >
	        
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="1dip"
		        android:layout_weight="0.5"
			    android:text="@string/empty"
			    android:textAppearance="?android:attr/textAppearanceSmall" />

	    	<TextView
			    android:id="@+id/enable_bridge_text"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_weight="0.5"
	        	android:background="#848989"
		        android:layout_gravity="right"
			    android:text="@string/hive_id_hint" />

			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="1dip"
		        android:layout_weight="0.5"
			    android:text="@string/empty"
			    android:textAppearance="?android:attr/textAppearanceSmall" />
			
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="1dip"
		        android:layout_weight="0.5"
			    android:text="@string/empty"
			    android:textAppearance="?android:attr/textAppearanceSmall" />

	    </LinearLayout>
	    
	    <ImageButton
		    android:id="@+id/enable_bridge_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.01"
		    android:contentDescription="@string/enable_bridge_desc_hint"
		    android:src="@drawable/ic_rarrow"
		    android:text="@string/empty" />

	</LinearLayout>
	
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
	    android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="15dip"
        android:orientation="horizontal" >
		
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:orientation="vertical" >
	        
	   		<TextView
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:text="@string/ble_reset_label"
	   		    android:textAppearance="?android:attr/textAppearanceMedium"
	   		    android:textStyle="bold" />
	
	   		<TextView
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:layout_marginLeft="15dip"
	   		    android:text="@string/ble_reset_desc_hint"
	   		    android:textAppearance="?android:attr/textAppearanceSmall" />

   		</LinearLayout>
   		
		<ImageButton
		    android:id="@+id/bleResetButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.01"
		    android:contentDescription="@string/ble_reset_desc_hint"
		    android:src="@drawable/ic_rarrow"
		    android:text="@string/empty" />

	</LinearLayout>
	
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
	    android:background="#888888" />

</LinearLayout>
